# django-survival-guide

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  Makefile  README.md  ROADMAP.md  docker-compose.yml  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml
docker/: entrypoint.sh
docs/: index.en.md  index.md
docs/advanced/: async-example.en.md  async-example.md  capstone.en.md  capstone.md  drf-advanced.en.md  drf-advanced.md  drf.en.md  drf.md  e2e-playwright.en.md  e2e-playwright.md  sync-vs-async.en.md  sync-vs-async.md  testing-advanced.en.md  testing-advanced.md  testing.en.md  testing.md
docs/frontend/: css.en.md  css.md  django-integracao.en.md  django-integracao.md  html.en.md  html.md  htmx.en.md  htmx.md  http.en.md  http.md  index.en.md  index.md  javascript.en.md  javascript.md  styling.en.md  styling.md
docs/get-started/: installation.en.md  installation.md
docs/libs/: afins.en.md  afins.md  allauth.en.md  allauth.md  celery.en.md  celery.md  channels.en.md  channels.md  containers.en.md  containers.md  data-libs.en.md  data-libs.md  django-filter.en.md  django-filter.md  django-ninja.en.md  django-ninja.md  graphql.en.md  graphql.md  index.en.md  index.md  payments-stripe.en.md  payments-stripe.md  scraping-selenium.en.md  scraping-selenium.md  sse.en.md  sse.md  ui-libs.en.md  ui-libs.md  webpush.en.md  webpush.md
docs/referencia/: admin.en.md  admin.md  advanced-db.en.md  advanced-db.md  aggregation-groupby.en.md  aggregation-groupby.md  api.en.md  api.md  auth.en.md  auth.md  cache.en.md  cache.md  composite-keys.en.md  composite-keys.md  config-ambientes.en.md  config-ambientes.md  contenttypes.en.md  contenttypes.md  contrib-apps.en.md  contrib-apps.md  contrib-postgres.en.md  contrib-postgres.md  csp.en.md  csp.md  custom-fields.en.md  custom-fields.md  custom-user.en.md  custom-user.md  deploy-docker.en.md  deploy-docker.md  deploy-paas.en.md  deploy-paas.md  deploy.en.md  deploy.md  drf.en.md  drf.md  email-senhas.en.md  email-senhas.md  external-apis.en.md  external-apis.md  (+74 more)
docs/sobre/: ci-cd.en.md  ci-cd.md  contribuindo.en.md  contribuindo.md  lint.en.md  lint.md  making-of.en.md  making-of.md
docs/tutorial/: admin.en.md  admin.md  authentication.en.md  authentication.md  class-based-views.en.md  class-based-views.md  forms.en.md  forms.md  messages.en.md  messages.md  (+16 more)
example_async/: manage.py
(+38 files in other folders)
