[project]
name = "django-survival-guide"
version = "0.1.0"
description = "Aprenda Django moderno com tipagem clara, orientação a objetos e zero mágica."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=6.0,<7",
    "djangorestframework>=3.17.1",
]

[dependency-groups]
dev = [
    "django-stubs>=6.0.7",
    "djangorestframework-stubs>=3.17.0",
    "mypy>=2.3.0",
    "pytest>=9.1.1",
    "pytest-django>=4.12.0",
    "ruff>=0.15.22",
]
docs = [
    "mkdocs-material>=9.7.7",
    "mkdocs-static-i18n>=1.3.1",
    "mkdocstrings[python]>=1.0.6",
]
prod = [
    "gunicorn>=26.0.0",
    "psycopg[binary]>=3.3.4",
    "whitenoise>=6.12.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
pythonpath = ["example"]
python_files = ["test_*.py", "tests.py"]
testpaths = ["example"]

[tool.ruff]
line-length = 88
target-version = "py313"
extend-exclude = ["**/migrations/*"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "N", "SIM", "RUF", "ANN"]
ignore = [
    "ANN401",
    "ANN002",
    "ANN003",
    "RUF012",
]

[tool.ruff.lint.per-file-ignores]
"**/tests/*" = ["S101", "ANN"]
"**/__init__.py" = ["F401"]
"**/settings.py" = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.13"
plugins = ["mypy_django_plugin.main", "mypy_drf_plugin.main"]
mypy_path = "example"
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
exclude = ['migrations/']

[tool.django-stubs]
django_settings_module = "config.settings"

[[tool.mypy.overrides]]
module = ["*.migrations.*", "*.tests.*"]
ignore_errors = true
